refactor(broad-admin): 重构项目并添加新功能
- 更新数据库配置和 Redis 配置
- 添加分页功能和 JWT 支持
- 集成 SpringDoc 替代 Swagger
- 优化代码结构和命名规范
- 添加验证码、Excel 导出等新功能